--- a/MA.Web/Design/Customers/Default.master
+++ b/MA.Web/Design/Customers/Default.master
@@ -56,18 +56,18 @@
                     
                 </p>
                 <ul id="header-icons">
-                    <li><a href="Customers/Ordini.aspx">Stato Ordini</a></li>
+                    <li><a href="<%= Page.ResolveClientUrl("~/Design/Customers/") %>Ordini">Stato Ordini</a></li>
                     <asp:LoginView ID="loginView1" runat="server">
                         <LoggedInTemplate>
                             <li>
-                                <li><a href="Customers/Default.aspx">Account Info</a></li>
+                                <li><a href="<%= Page.ResolveClientUrl("~/Design/Customers/") %>Default">Account Info</a></li>
                             </li>
                             <li>&nbsp; | &nbsp;
                                 <asp:LoginName CssClass="colored red" runat="server" ID="loginName" FormatString="{0}" />
                             </li>
                             <li>
                                 <asp:LoginStatus Style="float: right; margin-left: 10px;" runat="server" ID="logStatus"
-                                    LoginText="Accedi" LogoutText="Esci" LogoutPageUrl="~/Design/Catalogo.aspx" CssClass="loginsubmit" />
+                                    LoginText="Accedi" LogoutText="Esci" LogoutPageUrl="~/Design/Default" CssClass="loginsubmit" />
                             </li>
                         </LoggedInTemplate>
                         <AnonymousTemplate>
@@ -77,7 +77,7 @@
                 </ul>
                 <div id="container">
                     <div id="header-logo">
-                        <img alt="" src="../images/Header_Logo_grafica.png" />
+                        <img alt="" src="<%= Page.ResolveClientUrl("~/Design/images/") %>/Header_Logo_grafica.png" />
                     </div>
                     <div id="header">
                         <div id="main_navigation" class="main-menu">
@@ -89,7 +89,7 @@
                     <div id="content">
                         <asp:ContentPlaceHolder ID="ContentPlaceHolderWrapper" runat="server">
                         </asp:ContentPlaceHolder>
-                        <img alt="" src="../images/immagine-pre-footer.png" />
+                        <img alt="" src="<%= Page.ResolveClientUrl("~/Design/images/") %>immagine-pre-footer.png" />
                         <div id="footer-wrapper">
                             <div id="footer-container">
                                     <div id="footer">
@@ -125,7 +125,7 @@
                                         </div>
                                         <div class="one-fourth last">
                                             <strong style="padding-left: 10px;">Metodi di Pagamento</strong>
-                                             <img src="../images/pagamenti.png" alt="" />
+                                             <img src="<%= Page.ResolveClientUrl("~/images") %>/pagamenti.png" alt="" />
                                         </div>
                                     </div>
                                 </div>
