--- a/MA.Web/Design/css/style.css
+++ b/MA.Web/Design/css/style.css
@@ -187,6 +187,8 @@ label {
     font-weight: normal;
     display: block;
     color: #7f7f7f;
+    font-size: 1.3em;
+    line-height: 1.6em;
 }
 
 input[type=text], input[type=password], input.text, input.title, textarea, select {
