--- a/MA.Web/Design/Customers/Default.master
+++ b/MA.Web/Design/Customers/Default.master
@@ -110,7 +110,7 @@
                                                 <li><a href="#">Pagamenti</a></li>
                                                 <li><a href="#">Spedizioni</a></li>
                                                 <li><a href="#">Punto Vendita</a></li>
-                                                <li><a href="www.materarredamenti.it/newsletter.aspx">Newsletter</a></li>
+                                                <li><a href="http://www.materarredamenti.it/newsletter.aspx">Newsletter</a></li>
                                             </ul>
                                         </div>
                                         <div style="margin-right: 10px;" class="one-fourth">
