--- a/MA.Web/Design/css/style.css
+++ b/MA.Web/Design/css/style.css
@@ -195,8 +195,8 @@ input[type=text], input[type=password], input.text, input.title, textarea, selec
     background-color: #FFF;
     border: 1px solid #ebebeb;
     font-size: 11px;
-    font-size: 1.35em;
-    line-height: 1.6em;
+    /*font-size: 1.35em;
+    line-height: 1.6em;*/
 }
 
     input[type=text]:focus, input[type=password]:focus, input.text:focus, input.title:focus, textarea:focus, select:focus {
