--- a/MA.Web/Design/css/style.css
+++ b/MA.Web/Design/css/style.css
@@ -195,8 +195,9 @@ input[type=text], input[type=password], input.text, input.title, textarea, selec
     background-color: #FFF;
     border: 1px solid #ebebeb;
     font-size: 11px;
-    /*font-size: 1.35em;
-    line-height: 1.6em;*/
+    font-size: 1.35em;
+    line-height: 1.6em;
+    /*width: 100%;*/
 }
 
     input[type=text]:focus, input[type=password]:focus, input.text:focus, input.title:focus, textarea:focus, select:focus {
@@ -554,7 +555,7 @@ a {
 
     a:hover {
         /*	text-decoration:underline;*/
-        color: #e64135;
+        /*color: #e64135;*/
     }
 
 .header-text-left {
@@ -1787,7 +1788,7 @@ ul#our-photos-footer {
 /*-------------------------------------------------------------------------------------------------*/
 
 .button {
-    cursor: pointer;
+    /*cursor: pointer;*/
     font-family: Arial, Helvetica, sans-serif;
     font-size: 11px;
     color: #ffffff;
@@ -3354,4 +3355,52 @@ a.portfolio-item-preview {
     width: 488px;
     font-size: 1.15em;
     line-height: 1.6em;
+}
+
+/*Buttons*/
+.fancy-button{
+    backface-visibility: hidden;
+    background-color: rgba(107, 170, 4, 0.8);
+    border: medium none;
+    border-radius: 5px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    color: #fff;
+    display: inline-block;
+    font-weight: 800;
+    padding: 12px 22px;
+    position: relative;
+    text-transform: uppercase;
+    top: 0;
+    transform: translateZ(0px);
+    transition-duration: 0.3s;
+    transition-property: color;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.fix-200-centered {
+    width: 200px;
+    text-align: center;
+}
+
+.fancy-button input[type="submit"]::before {
+    background-color: #fec571;
+    border-radius: 5px;
+    bottom: 0;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transform: scale(0);
+    transition-duration: 0.3s;
+    transition-property: transform;
+    transition-timing-function: ease-out;
+    z-index: -1;
+}
+*::before, *::after {
+    box-sizing: border-box;
+}
+*::before, *::after {
+    box-sizing: border-box;
 }
