--- a/MA.Web/Design/Default_r.master
+++ b/MA.Web/Design/Default_r.master
@@ -24,13 +24,29 @@
         type='text/css' />
     <link href="../css/delicious/stylesheet.css" rel="stylesheet" type="text/css" />
     <!--CSS FILES ENDS-->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="js/jqueryTools/jquery.tools.min.html"></script>
+    <script type="text/javascript" src="js/slides/slides.min.jquery.js"></script>
+    <script type="text/javascript" src="js/cycle-slider/cycle.js"></script>
+    <script type="text/javascript" src="js/nivo-slider/jquery.nivo.slider.js"></script>
+    <script type="text/javascript" src="js/tabify/jquery.tabify.js"></script>
+    <script type="text/javascript" src="js/prettyPhoto/jquery.prettyPhoto.js"></script>
+    <script type="text/javascript" src="js/twitter/jquery.tweet.js"></script>
+    <script type="text/javascript" src="js/scrolltop/scrolltopcontrol.js"></script>
+    <script type="text/javascript" src="js/portfolio/filterable.js"></script>
+    <script type="text/javascript" src="js/modernizr/modernizr-2.0.3.js"></script>
+    <script type="text/javascript" src="js/easing/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
+    <script type="text/javascript" src="js/swfobject/swfobject.js"></script>
 
-    <script type="text/javascript" src="../js/jquery.min.js"></script>
+
+    <%--<script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
     <script type="text/javascript" src="../js/slides.min.jquery.js"></script>
     <script type="text/javascript" src="../js/cycle.js"></script>
     <script type="text/javascript" src="../js/jquery.prettyPhoto.js"></script>
-    <script type="text/javascript" src="../js/scrolltopcontrol.js"></script>
+    <script type="text/javascript" src="../js/scrolltopcontrol.js"></script>--%>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -58,7 +74,8 @@
                     <asp:LoginView ID="loginView1" runat="server">
                         <LoggedInTemplate>
                             <li>Benvenuto:
-                                <asp:LoginName CssClass="colored red" runat="server" ID="loginName" FormatString="{0}" />&nbsp;&nbsp;/
+                                <asp:LoginName CssClass="colored red" runat="server" ID="loginName" FormatString="{0}" />
+                                &nbsp;&nbsp;/
                             </li>
                             <li><a href="<%= Page.ResolveClientUrl("~/Design/Customers/") %>Ordini">Stato Ordini&nbsp;&nbsp;/</a></li>
                             <li><a href="<%= Page.ResolveClientUrl("~/Design/Customers/") %>Default">Il mio Account</a></li>
