--- a/MA.Web/Design/Default_r.master
+++ b/MA.Web/Design/Default_r.master
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="js/prettyPhoto/jquery.prettyPhoto.js"></script>
     <script type="text/javascript" src="js/twitter/jquery.tweet.js"></script>
     <script type="text/javascript" src="js/scrolltop/scrolltopcontrol.js"></script>
-    <script type="text/javascript" src="js/portfolio/filterable.js"></script>
+<%--    <script type="text/javascript" src="js/portfolio/filterable.js"></script>--%>
     <script type="text/javascript" src="js/modernizr/modernizr-2.0.3.js"></script>
     <script type="text/javascript" src="js/easing/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
