--- a/MA.Web/Design/Default_r.master
+++ b/MA.Web/Design/Default_r.master
@@ -24,21 +24,21 @@
         type='text/css' />
     <link href="../css/delicious/stylesheet.css" rel="stylesheet" type="text/css" />
     <!--CSS FILES ENDS-->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
-    <script type="text/javascript" src="js/jqueryTools/jquery.tools.min.html"></script>
-    <script type="text/javascript" src="js/slides/slides.min.jquery.js"></script>
-    <script type="text/javascript" src="js/cycle-slider/cycle.js"></script>
-    <script type="text/javascript" src="js/nivo-slider/jquery.nivo.slider.js"></script>
-    <script type="text/javascript" src="js/tabify/jquery.tabify.js"></script>
-    <script type="text/javascript" src="js/prettyPhoto/jquery.prettyPhoto.js"></script>
-    <script type="text/javascript" src="js/twitter/jquery.tweet.js"></script>
-    <script type="text/javascript" src="js/scrolltop/scrolltopcontrol.js"></script>
-<%--    <script type="text/javascript" src="js/portfolio/filterable.js"></script>--%>
-    <script type="text/javascript" src="js/modernizr/modernizr-2.0.3.js"></script>
-    <script type="text/javascript" src="js/easing/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
-    <script type="text/javascript" src="js/swfobject/swfobject.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/jquery.min.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/custom.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/jqueryTools/jquery.tools.min.html"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/slides/slides.min.jquery.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/cycle-slider/cycle.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/nivo-slider/jquery.nivo.slider.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/tabify/jquery.tabify.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/prettyPhoto/jquery.prettyPhoto.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/twitter/jquery.tweet.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/scrolltop/scrolltopcontrol.js"></script>
+    <%--    <script type="text/javascript" src="js/portfolio/filterable.js"></script>--%>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/modernizr/modernizr-2.0.3.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/easing/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/swfobject/swfobject.js"></script>
 
 
     <%--<script type="text/javascript" src="../js/jquery.min.js"></script>
