--- a/MA.Web/Design/Default_r.master
+++ b/MA.Web/Design/Default_r.master
@@ -34,19 +34,10 @@
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/prettyPhoto/jquery.prettyPhoto.js"></script>
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/twitter/jquery.tweet.js"></script>
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/scrolltop/scrolltopcontrol.js"></script>
-    <%--    <script type="text/javascript" src="js/portfolio/filterable.js"></script>--%>
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/modernizr/modernizr-2.0.3.js"></script>
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/easing/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/swfobject/swfobject.js"></script>
-
-
-    <%--<script type="text/javascript" src="../js/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/custom.js"></script>
-    <script type="text/javascript" src="../js/slides.min.jquery.js"></script>
-    <script type="text/javascript" src="../js/cycle.js"></script>
-    <script type="text/javascript" src="../js/jquery.prettyPhoto.js"></script>
-    <script type="text/javascript" src="../js/scrolltopcontrol.js"></script>--%>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -111,26 +102,25 @@
                                         <div style="margin-left: 30px; margin-right: 10px;" class="one-fourth">
                                             <strong style="padding-left: 10px;">Design</strong>
                                             <ul class="simple-nav">
-                                                <li><a href="Catalogo/Complementi">Complementi</a></li>
-                                                <li><a href="Catalogo/Arredi">Arredi</a></li>
-                                                <li><a href="Catalogo.aspx/Idee-Regalo">Idee Regalo</a></li>
-                                                <li><a href="Catalogo/Materassi">Materassi</a></li>
-                                                <li><a href="Catalogo/Maioliche">Maioliche</a></li>
+                                                <li><a href="<%= Page.ResolveClientUrl("~/Design") %>/Catalogo/Complementi">Complementi</a></li>
+                                                <li><a href="<%= Page.ResolveClientUrl("~/Design") %>/Catalogo/Arredi">Arredi</a></li>
+                                                <li><a href="<%= Page.ResolveClientUrl("~/Design") %>/Catalogo/Idee-Regalo">Idee Regalo</a></li>
+                                                <li><a href="<%= Page.ResolveClientUrl("~/Design") %>/Catalogo/Materassi">Materassi</a></li>
+                                                <li><a href="<%= Page.ResolveClientUrl("~/Design") %>/Catalogo/Maioliche">Maioliche</a></li>
                                             </ul>
                                         </div>
                                         <div style="margin-right: 10px;" class="one-fourth">
                                             <strong style="padding-left: 10px;">Shop Online</strong>
                                             <ul class="simple-nav">
-                                                <li><a href="#">Pagamenti</a></li>
-                                                <li><a href="#">Spedizioni</a></li>
-                                                <li><a href="#">Punto Vendita</a></li>
+                                                <li><a href="<%= Page.ResolveClientUrl("~/Design") %>/Pagamenti">Pagamenti</a></li>
+                                                <li><a href="<%= Page.ResolveClientUrl("~/Design") %>/Spedizioni">Spedizioni</a></li>
+                                                <li><a href="<%= Page.ResolveClientUrl("~/Design") %>/Privacy">Privacy</a></li>
                                                 <li><a target="_blank" href="http://www.materarredamenti.it/newsletter.aspx">Newsletter</a></li>
                                             </ul>
                                         </div>
                                         <div style="margin-right: 10px;" class="one-fourth">
                                             <strong style="padding-left: 10px;">Contatti</strong>
                                             <ul style="padding-left: 10px;" id="footer-info">
-                                                <li>Via Selva S. Vito, 23 - Laterza (TA)</li>
                                                 <li>Tel.  + 39 099 82 16 774</li>
                                                 <li>Cell. + 39 338 49 01 627 </li>
                                                 <li><a href="#">shop@materarredamenti.it</a></li>
@@ -143,8 +133,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div style="width: 100%; padding-left: 30px; padding-top: 30px;" class="left">
-                                    <p>
+                                <div style="width: 100%; padding-left: 30px; font-size: 1em; padding-top: 30px;" class="left">
+                                    <p style="font-size:0.85em;text-align: center;">
+                                        Copyright © 2015 Matera Arredamenti. P.IVA 00000000000 - R.E.A. 1111111
                                     </p>
                                 </div>
                             </div>
