--- a/MA.Web/Design/Customers/Default.master
+++ b/MA.Web/Design/Customers/Default.master
@@ -130,7 +130,7 @@
                                         </div>
                                         <div class="one-fourth last">
                                             <strong style="padding-left: 10px;">Metodi di Pagamento</strong>
-                                            <img src="<%= Page.ResolveClientUrl("images") %>/pagamenti.png" alt="" />
+                                            <img src="<%= Page.ResolveClientUrl("~/Design/images") %>/pagamenti.png" alt="" />
                                         </div>
                                     </div>
                                 </div>
