Redirect su Index

--- a/MA.Web/Design/Admin/Default.master
+++ b/MA.Web/Design/Admin/Default.master
@@ -126,7 +126,7 @@
                                 </div>
                                 <div style="width: 100%; padding-left: 30px; font-size: 1em; padding-top: 30px;" class="left">
                                     <p style="font-size:0.85em;text-align: center;">
-                                        Copyright © 2015 Matera Arredamenti. P.IVA 00000000000 - R.E.A. 1111111
+                                        Copyright © 2015 Matera Arredamenti. P.IVA 00240610733 - R.E.A. TA-75834
                                     </p>
                                 </div>
                             </div>
