--- a/MA.Web/Design/Default_r.master
+++ b/MA.Web/Design/Default_r.master
@@ -141,5 +141,12 @@
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/easing/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
     <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/swfobject/swfobject.js"></script>
+    <script type="text/javascript" src="<%= Page.ResolveClientUrl("~/Design/") %>js/cookiechoices.js"></script>
+    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', function (event) {
+            cookieChoices.showCookieConsentBar('Matera Arredamenti utilizza i cookie per migliorare la tua esperienza sul sito. Continuando la navigazione autorizzi l\'uso dei cookie.',
+                'OK', 'Maggiori Informazioni', 'URL Pagina Politica Privacy');
+        });
+</script>
 </body>
 </html>
